# ic-sql-migrate

./: .gitignore  .rust-analyzer.json  Cargo.toml  FRONTEND_FEATURES.md  README.md  dfx.json  test.sh
.cargo/: config.toml
examples/: README.md
examples/sqlite/: Cargo.toml  README.md  build.rs  canbench.yml  canbench_results.yml  sqlite-example.did  sqlite.did
examples/sqlite/migrations/: 000_initial.sql  002_add_index.sql  004_more_seed.sql
examples/sqlite/src/: lib.rs
examples/sqlite/src/person/: person_manager.rs  person_types.rs
examples/sqlite/src/person/controller/: person_create.rs
examples/sqlite/src/seeds/: mod.rs  seed_001_test.rs  seed_002_more_data.rs
examples/turso/: Cargo.toml  README.md  build.rs  canbench.yml  turso.did
examples/turso/migrations/: 001_person_seed.sql  005_perf_table.sql
examples/turso/src/: lib.rs
scripts/: build-sqlite.sh
src/backend/: Cargo.toml  backend.did  build.rs  dfx.json
src/backend/declarations/: backend.did.d.ts  backend.did.js
src/backend/migrations/: 000_initial.sql  m000_initial.rs  m001_persons_seed.rs  m002_add_email_column.sql  m003_add_phone_column.sql
src/backend/src/: lib.rs
src/backend/src/person/: person_manager.rs  person_types.rs
src/backend/src/person/controller/: person_create.rs  person_query.rs  person_update.rs
src/frontend/components/: persons.tsx  sample-data-button.tsx
src/frontend/hooks/: use-create-db.tsx  use-create-person.tsx  use-delete-person.tsx  use-query-persons.tsx  use-update-person.tsx
src/frontend/routes/: add-person.tsx
src/migrations/: Cargo.toml
src/migrations/src/: lib.rs
src/migrations_build/: Cargo.toml
src/migrations_build/src/: lib.rs
