[package]
name = "sqlite-example"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
canbench-rs = "0.2.1"
candid = "0.10"
ic-cdk = "0.18"
ic-rusqlite = { version = "0.4.3", features = [
  "precompiled",
], default-features = false }
ic-sql-migrate = { path = "../../packages/ic-sql-migrate", features = [
  "sqlite",
] }

[build-dependencies]
ic-sql-migrate = { path = "../../packages/ic-sql-migrate" }
