[package]
name = "turso-example"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
canbench-rs = "0.2.1"
candid = "0.10"
ic-cdk = "0.18"
turso = "0.2.2"
ic-stable-structures = "0.7"
ic-wasi-polyfill = "0.11.0"
ic-sql-migrate = { path = "../../packages/ic-sql-migrate", features = [
  "turso",
] }


[build-dependencies]
ic-sql-migrate = { path = "../../packages/ic-sql-migrate" }
