[package]
name = "turso-example"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
turso = "0.1.4"
tokio = { version = "1.47" }

ic-stable-structures = "0.7"
ic-wasi-polyfill = "0.11"
ic-sql-migrate = { path = "../../packages/ic-sql-migrate", features = [
  "turso",
] }
canbench-rs = "0.2.1"


[build-dependencies]
ic-sql-migrate = { path = "../../packages/ic-sql-migrate" }
