[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.14"
ic-cdk = "0.18.5"
ic-rusqlite = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
migrations = { path = "../migrations", features = ["ic"] }

[build-dependencies]
migrations_build = { path = "../migrations_build" }
